Improve command line interface (#9)
closes #2 #3 #4 

* remove python 2 compability

* install CLI in user data path

* made preview optional

* store_true, store_false for boolean inputs

* removed dublicated 'dest' parameters

* bump version

* Update README.md

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,9 @@ install_requires =
 include_package_data = True
 zip_safe = False
 
+[options.entry_points]
+console_scripts =
+    stitch = stitching.cli.stitch:main
+
 [options.packages.find]
-include = stitching
 exclude = tests
