--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,8 @@
+# Apply to all files without commiting:
+#   pre-commit run --all-files
+# Update this file:
+#   pre-commit autoupdate
+
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.2.0
@@ -6,15 +11,7 @@ repos:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: mixed-line-ending
-      - id: check-symlinks
       - id: check-added-large-files
-      - id: check-json
-      - id: check-symlinks
-      - id: check-added-large-files
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: "v2.6.2"
-    hooks:
-      - id: prettier
   - repo: https://github.com/psf/black
     rev: 22.3.0
     hooks:
@@ -27,12 +24,13 @@ repos:
     rev: 3.9.2
     hooks:
       - id: flake8
-  - repo: https://github.com/detailyang/pre-commit-shell
-    rev: 1.0.5
-    hooks:
-      - id: shell-lint
-        args: [--format=json]
+        args:
+          - "--max-line-length=88"
+          - "--ignore=E203"
   - repo: https://github.com/timothycrosley/isort
     rev: 5.10.1
     hooks:
       - id: isort
+        args:
+          - "--profile=black"
+          - "--filter-files"
